/*
 * Copyright Â© 2024 Kaleido, Inc.
 *
 * Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with
 * the License. You may obtain a copy of the License at
 *
 * http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on
 * an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the
 * specific language governing permissions and limitations under the License.
 *
 * SPDX-License-Identifier: Apache-2.0
 */

syntax = "proto3";

package io.kaleido.paladin.toolkit;

import "on_chain_events.proto";
import "from_registry.proto";

message ConfigureRegistryRequest {
    string name = 1; // The name
    string config_json= 2; // The block of config supplied in the configuration for the domain by the Paladin administrator (converted from YAML to JSON for transport)
  }

message ConfigureRegistryResponse {
  RegistryConfig registry_config = 1;
}

message RegistryConfig {
  repeated RegistryEventSource event_sources = 1;
}

message HandleRegistryEventsRequest {
  string batch_id = 2; // A unique identifier for this batch
  repeated OnChainEvent events = 4; // The list of events from the block indexer
}

message HandleRegistryEventsResponse {
  repeated RegistryEntry entries = 1; // Upserts to entities
  repeated RegistryProperty properties = 2; // Upserts to properties
}

message RegistryEventSource {
  string contract_address = 1; // the contract address to listen to
  string abi_events_json = 2; // ABI events that the registry listens to from the chain
}
